@@ -8,21 +8,31 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
 
-    public final static String ORIGIN = "http://localhost:3000";
+    public final static String ORIGIN = "https://localhost:3000";
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(ORIGIN));
+        configuration.setAllowedOrigins(List.of(
+                "https://localhost",
+                "https://localhost/",
+                "https://localhost:3000",
+                "https://localhost:3000/",
+                "http://localhost",
+                "http://localhost:3000"
+        ));
         configuration.setAllowedMethods(Arrays.asList(
                 HttpMethod.GET.name(),
                 HttpMethod.POST.name(),
                 HttpMethod.PUT.name(),
-                HttpMethod.DELETE.name()
+                HttpMethod.DELETE.name(),
+                HttpMethod.PATCH.name(),
+                HttpMethod.OPTIONS.name()
         ));
         configuration.setAllowedHeaders(Arrays.asList(
                 "Content-Type",
